<resources>
    <string name="app_name">Favorite Twitter Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_favorite_twitter_searches">Favorite Twitter Searches</string>
    <string name="searchURL">http://search.twitter.com/search?q=</string>
    <string name="tagPrompt">Tag your query</string>
    <string name="queryPrompt">Enter Twitter Search query here</string>
    <string name="tagedSearches">Tagged Searches</string>
    <string name="edit">Edit</string>
    <string name="clearTags">Clear Tags</string>
    <string name="save">Save</string>
    <string name="erase">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">Please enter a search query and tag it.</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">This will delete all saved searches</string>
</resources>