<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:stretchColumns="*">


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10"
            android:hint="@string/queryPrompt"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_orange">

        <EditText
            android:id="@+id/taggedSearchesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:text="@string/tagedSearches"
            android:textColor="@android:color/black" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_orange">

        <ScrollView
            android:id="@+id/queryScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:padding="5px">

            <TableLayout
                android:id="@+id/queryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5px">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Angular"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Android"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="iPhone"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Json"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="JQuery"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="AndroidHTP"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Test"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Elon Musk"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Bill Gates"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="Ionic"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/newTagTableRow"
                    android:gravity="center">

                    <Button
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:text="ReactJs"/>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/edit"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clearTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/clearTags"
            android:layout_span="2"
            />
    </TableRow>


</TableLayout>